style: fix input colors on iOS

--- a/src/components/options/options.module.css
+++ b/src/components/options/options.module.css
@@ -59,9 +59,11 @@
 }
 
 .inputField {
-  color: var(--dark-color);
+  opacity: 1;
+  color: var(--text-color);
+  -webkit-text-fill-color: var(--text-color);
   border-radius: 3em;
-  background-color: white;
+  background-color: var(--background-color);
   padding: 1.3em 2em;
   width: 20em;
   margin-top: 0.3em;
